# Dispatch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes_approvals.py  routes_runs.py  schemas.py
app/connectors/: __init__.py  base.py  github_mcp.py  notion_mcp.py  slack_mcp.py
app/core/: __init__.py  config.py  policies.py  sentry_setup.py
app/eval/: __init__.py  rubric.py  run_eval.py  sample_requests.jsonl
app/orchestration/: __init__.py  drafter.py  engine.py  executor.py  planner.py
app/prompts/: approval_summary.md  classify_use_case.md  draft_solution_brief.md  generate_issue_breakdown.md
app/state/: __init__.py  models.py  repository.py  transitions.py
app/templates/: architecture_note.md.j2  repo_readme.md.j2  solution_brief.md.j2
docs/: architecture.md  design-decisions.md  roadmap.md  security-model.md
infra/: Dockerfile
tests/: conftest.py  test_approval_gate.py  test_end_to_end.py  test_executor_idempotency.py  test_planner.py
